[gd_scene load_steps=5 format=2]

[ext_resource path="res://mainMenu/menu.gd" type="Script" id=1]
[ext_resource path="res://mainMenu/ button.tscn" type="PackedScene" id=2]
[ext_resource path="res://mainMenu/pressedButton.png" type="Texture" id=3]
[ext_resource path="res://dialogueBox/dialog_box.png" type="Texture" id=4]

[node name="menu" type="Node2D"]
script = ExtResource( 1 )

[node name="buttons" type="Node2D" parent="."]

[node name="Continue" parent="buttons" instance=ExtResource( 2 )]
texture_disabled = ExtResource( 3 )
text_ = "Load"

[node name="NewGame" parent="buttons" instance=ExtResource( 2 )]
margin_top = 80.0
margin_bottom = 160.0
text_ = "New Game"

[node name="Options" parent="buttons" instance=ExtResource( 2 )]
margin_top = 160.0
margin_bottom = 240.0
text_ = "Options"

[node name="Exit" parent="buttons" instance=ExtResource( 2 )]
margin_top = 240.0
margin_bottom = 320.0
text_ = "Exit"

[node name="options" type="Node2D" parent="."]
position = Vector2( 615.575, 159.738 )
__meta__ = {
"_edit_group_": true
}

[node name="box" type="Sprite" parent="options"]
scale = Vector2( 2, 3 )
texture = ExtResource( 4 )
[connection signal="pressed" from="buttons/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="buttons/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="buttons/Exit" to="." method="_on_Exit_pressed"]
